fix: dockerfile to jax-ws

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,19 @@
 version: '3.9'
 
 services:
-#  soap-jax-ws:
-#    container_name: soap-jax-ws
-#    build:
-#      context: .
-#      dockerfile: dockerfile/Dockerfile.jaxws.dev
-#    volumes:
-#      - ./src:/app
-#    ports:
-#      - "8080:8080"
-#    networks:
-#      - soap-network
-#    depends_on:
-#      - soap-mysql
+  soap-jax-ws:
+    container_name: soap-jax-ws
+    build:
+      context: .
+      dockerfile: dockerfile/Dockerfile.jaxws.dev
+    volumes:
+      - ./src:/app
+    ports:
+      - "8080:8080"
+    networks:
+      - soap-network
+    depends_on:
+      - soap-mysql
   soap-mysql:
     container_name: soap-mysql-db
     restart: unless-stopped
