--- a/dockerfile/Dockerfile.jaxws.dev
+++ b/dockerfile/Dockerfile.jaxws.dev
@@ -1,6 +1,7 @@
 FROM openjdk:22-slim
 
+WORKDIR /app
+
 EXPOSE 8080
 
-RUN ls
-CMD ["java", "-jar", "target/bondflix-soap-service-1.0.jar"]
+CMD ["java", "-cp", "target/bondflix-soap-service-1.0-jar-with-dependencies.jar", "org.Bondflix.Main"]
