--- a/src/.env.example
+++ b/src/.env.example
@@ -1,4 +1,7 @@
-ENV_STATUS=DEV
+ENVIRONMENT=PROD
 DB_URL_DEV=jdbc:mysql://localhost:3306/soap_db
+DB_URL_PROD=jdbc:mysql://soap-mysql:3306/soap_db
 DB_USER=soap_user
 DB_PASS=soap_pwd
+SERVER_HOST=soap-jax-ws
+SERVER_PORT=8080
