feat: send email

--- a/src/.env.example
+++ b/src/.env.example
@@ -5,3 +5,6 @@ DB_USER=soap_user
 DB_PASS=soap_pwd
 SERVER_HOST=soap-jax-ws
 SERVER_PORT=8080
+
+MAILTRAP_USERNAME=1bc3c13529f7d8
+MAILTRAP_PASSWORD=1a6dc29e5f655c
