--- a/src/pom.xml
+++ b/src/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>rt</artifactId>
             <version>2.3.7</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.angus</groupId>
+            <artifactId>angus-mail</artifactId>
+            <version>2.0.2</version>
+        </dependency>
     </dependencies>
 
     <build>
