--- a/dockerfile/Dockerfile.jaxws.dev
+++ b/dockerfile/Dockerfile.jaxws.dev
@@ -2,6 +2,6 @@ FROM openjdk:22-slim
 
 WORKDIR /app
 
-EXPOSE 8080
+EXPOSE 8081
 
-CMD ["java", "-cp", "target/bondflix-soap-service-1.0-jar-with-dependencies.jar", "org.Bondflix.Main"]
+CMD ["java", "--illegal-access=warn", "--add-opens", "java.base/java.lang=ALL-UNNAMED", "-cp", "target/bondflix-soap-service-1.0-jar-with-dependencies.jar", "org.Bondflix.Main"]
