feat: add envfile

--- a/src/.env.example
+++ b/src/.env.example
@@ -8,3 +8,8 @@ SERVER_PORT=8080
 
 MAILTRAP_USERNAME=1bc3c13529f7d8
 MAILTRAP_PASSWORD=1a6dc29e5f655c
+
+REST_EMAIL_ROUTE=http://host.docker.internal:3000/api/v1/users/subscription/emails/
+UPDATE_SUBSCRIPTION_ROUTE=http://host.docker.internal:8080/api/subscription
+X-API-Key=soap-api-key-to-get-email
+SUB-API-KEY=soap-api-key
